# proc-peek

./: .gitignore  README.md  pyproject.toml
proc-peek/: cli.py  process_info.py  tui.py
proc_peek/: __init__.py  cli.py  main.py  process_info.py  tui.py
tests/: test_cli.py
